# backend/app/serializers/vapid_key_resource.rb
@@ -1,0 +1,3 @@
+class VapidKeyResource < ApplicationResource
+  attribute :public_key, &:public_key
+end
