# backend/app/serializers/web_push_subscription_resource.rb
@@ -1,0 +1,3 @@
+class WebPushSubscriptionResource < ApplicationResource
+  attributes :id, :endpoint
+end
